@@ -2,8 +2,6 @@ package ru.job4j.list;
 
 import org.junit.Test;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.core.Is.is;
@@ -12,7 +10,7 @@ import static org.junit.Assert.assertThat;
 /**
  * @author Alexey Kuzhelev (aleks2kv1977@gmail.com)
  * @version $Id$
- * @since 21.01.2019
+ * @since 31.08.2019
  */
 
 /**
@@ -26,7 +24,7 @@ public class ConvertList2ArrayTest {
     public void when7ElementsThen9() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6, 7),
+                List.of(1, 2, 3, 4, 5, 6, 7),
                 3
         );
         int[][] expect = {
@@ -44,7 +42,7 @@ public class ConvertList2ArrayTest {
     public void when5ElementsThen6() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5),
+                List.of(1, 2, 3, 4, 5),
                 3
         );
         int[][] expect = {
@@ -60,12 +58,13 @@ public class ConvertList2ArrayTest {
      */
     @Test
     public void when2ArrayThen1Integer() {
-        List<int[]> list = new ArrayList<>();
-        list.add(new int[]{1, 2});
-        list.add(new int[]{3, 4, 5, 6});
+        List<int[]> list = List.of(
+                new int[]{1, 2},
+                new int[]{3, 4, 5, 6}
+        );
         ConvertList2Array convertList = new ConvertList2Array();
         List<Integer> result = convertList.convert(list);
-        List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6);
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6);
         assertThat(result, is(expect));
     }
 }
